--- a/23-flex-website.css
+++ b/23-flex-website.css
@@ -14,17 +14,25 @@ body {
 }
 header,
 footer {
-  background-color: green;
   height: 6.25rem;
 }
+footer {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 1.5rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+header {
+  background-color: black;
+}
 aside {
-  background-color: darkorange;
+  background-color: darkora;
   color: white;
 }
 h1 {
   color: orange;
-}
-p {
 }
 /* Header */
 header {
@@ -142,23 +150,156 @@ main {
   font-size: 0.9rem;
 }
 .downloads-users img {
-  height: 6rem;
-  width: 6rem;
+  height: 4rem;
+  width: 4rem;
   border-radius: 50%;
 }
 .downloads-stats {
   background-color: darkorange;
   padding: 1rem 2rem;
   color: black;
-  font-size: .9rem;
+  font-size: 0.9rem;
 }
 .downloads-stats .rate {
   font-size: 2.5rem;
   font-weight: bold;
-  margin-bottom: -.25rem;
+  margin-bottom: -0.25rem;
 }
-
+.downloads-content {
+  display: flex;
+  flex-flow: column;
+}
+.downloads-content a,
+.downloads-stats {
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  text-align: center;
+}
+.downloads-type,
+.downloads-users {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.downloads-info h4 {
+  flex-basis: 20%;
+}
+.downloads-type {
+  margin-bottom: 1rem;
+}
+/* Gallery */
+.gallery-images {
+  margin-left: -8px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+  align-content: space-between;
+}
+.gallery-img {
+  height: 250px;
+  flex-grow: 1;
+  margin: 0 0 8px 8px;
+}
+.gallery-img:nth-child(4n + 1) {
+  flex-basis: 150px;
+}
+.gallery-img:nth-child(4n + 2) {
+  flex-basis: 225px;
+}
+.gallery-img:nth-child(4n + 3) {
+  flex-basis: 180px;
+}
+.gallery-img:nth-child(4n + 4) {
+  flex-basis: 180px;
+}
+.gallery-img img {
+  height: 100%;
+  object-fit: cover;
+}
+/* Aside Right */
+aside {
+  padding: 2rem;
+  color: black;
+}
+.box {
+  background-color: darkorange;
+  margin-bottom: 2rem;
+}
+.box-content {
+  padding: 0.5rem 2rem;
+}
+.box-menu {
+  background-color: darkorange;
+}
+.box-menu ul {
+  list-style-type: none;
+  padding-left: 1rem;
+}
+.box-menu a {
+  display: block;
+  padding-bottom: 0.4rem;
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+.principal-menu {
+  color: black;
+  background-color: darkorange;
+}
+.principal-menu ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.principal-menu li a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.1rem;
+  font-weight: bold;
+  padding: 0.6rem 1rem;
+  display: block;
+  transition: all 0.5s ease;
+}
+.principal-menu li a:hover {
+  background-color: orange;
+  color: white;
+}
 /* Media queries */
+@media screen and (min-width: 810px) and (max-width: 1120px) {
+  aside {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .box {
+    flex-basis: 48.8%;
+  }
+}
+@media screen and (min-width: 810px) {
+  .downloads-content {
+    display: flex;
+    flex-flow: row;
+  }
+  .downloads-content a,
+  .downloads-stats {
+    flex-grow: 1;
+  }
+  .downloads-info {
+    flex-grow: 2;
+  }
+  .principal-menu ul {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  .principal-menu ul li {
+    flex-grow: 1;
+    flex-basis: auto;
+    flex-shrink: 0;
+  }
+}
 @media screen and (min-width: 810px) {
   .courses {
     display: flex;
